# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build-image.sh  deploy.sh  docker-compose.yml
alphavantage/: Cargo.toml
alphavantage/src/: lib.rs
db_updater/: .env.example  Cargo.toml
db_updater/src/: lib.rs  main.rs  rsi.rs
db_updater/src/alphavantage/: mod.rs
db_updater/src/finnhub/: mod.rs
experiment_graph/: data.csv  data_stock.csv  main.ipynb
experiment_graph/.ipynb_checkpoints/: data-checkpoint.csv  data_stock-checkpoint.csv  main-checkpoint.ipynb
fuzzy_logic/: Cargo.toml
fuzzy_logic/src/: lib.rs  linguistic.rs  plot.rs  set.rs  shape.rs
fuzzy_logic/src/deprecated/: linguistic.rs  mod.rs
fuzzy_logic/src/pure/: mod.rs  set.rs  shape.rs
fuzzy_logic/src/temp/: mod.rs
src/: backtest.rs  core.rs  main.rs
src/core/: backtest.rs  error.rs  fuzzy.rs  mod.rs  settings.rs  users.rs
src/core/optimization/: mod.rs  swarm.rs
tech_indicators/: Cargo.toml  README.md
tech_indicators/src/: adx_utills.rs  fuzzy.rs  lib.rs  math.rs  rsi.rs  rsi_utills.rs  ta.rs  utils.rs
