[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy_logic = { path = "fuzzy_logic" }
tech_indicators = { path = "tech_indicators" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
dotenvy = "0.15.6"
chrono = "0.4.23"
futures = "0.3"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
cached = "0.44.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]
