[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy_logic = { path = "fuzzy_logic" }
tech_indicators = { path = "tech_indicators" }
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
dotenvy = "0.15.6"
chrono = "0.4.23"
futures = "0.3"
cached = "0.44.0"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.6.4"
