[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tech_indicators", "fuzzy_logic"]

[dependencies]
fuzzy_logic = { path = "fuzzy_logic" }
tech_indicators = { path = "tech_indicators" }
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
dotenvy = "0.15.6"
chrono = "0.4"
futures = "0.3"
cached = { version = "0.46.1", features = ["async"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
rayon = "1.7.0"
thiserror = "1.0"
rand = "0.8.5"
log = "0.4"
