[package]
name = "alphavantage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
csv = "1.1.6"
bson = { version = "2.5.0", features = ["chrono-0_4"] }