[package]
name = "db_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.3"
dotenvy = "0.15.6"
serde_json = "1.0.93"
dotenvy_macro = "0.15.1"
futures = "0.3"
binance-rs-async = "1.3.1"
csv = "1.2.1"
itertools = "0.10.5"
chrono = { version =  "0.4.24", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.152", features = ["derive"] }
