[package]
name = "tech_indicators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
serde = { version = "1.0.152", features = ["derive"] }
fuzzy_logic = { path = "../fuzzy_logic" }
itertools = "0.10.5"

[dev-dependencies]
float-cmp = "0.9.0"
